2005-11-01  Richard Hult  <richard@imendio.com>

	* Release 2.6.4.12, which is a first version for testing with
	D-BUS 0.30+.
	
	* autogen.sh: Bring up to date from upstream.

	* backends/Makefile.am: Link the test with the backend instead of
	compiling the source twice, removes warning from libtool.
	
	* configure.in: Bump version, and bring the gtk-doc check up to
	date.

2005-09-30  Richard Hult  <richard@imendio.com>

	* gconf/gconf-dbus.c (ensure_dbus_connection): Use _open_private
	to open a separate connection. We might be able to use a shared
	one now that threading is improved in dbus.

	* gconf/gconfd-dbus.c (server_real_handle_get_db): Simplify and
	fix warning.

2005-09-29  Richard Hult  <richard@imendio.com>

	* gconf/gconf-dbus.c (handle_notify): Fix a leak of the key.

	* gconf/gconf-client.c (clear_cache_foreach): Fix leak from
	upstream gconf.

	* Change ServiceOwner to NameOwner, and change the match rules
	used to take advantage of argument matching rules, this makes both
	the daemon and client wake up less, when other services come and
	go.

2005-09-29  Richard Hult  <richard@imendio.com>

	* Work in progress, the first part of moving to dbus 0.5x. There
	are still some ServiceOwnerChange changes that need to be done.

2005-09-05  Richard Hult  <richard@imendio.com>

	* Release 2.6.4.11.

2005-09-01  Richard Hult  <richard@imendio.com>

	* gconf/gconf-dbus.c (ensure_service): Unref the reply, fixes a
	small leak.

2005-08-15  Mikael Hallendal  <micke@imendio.com>

	* Release 2.6.4.10  

2005-06-23  Mikael Hallendal  <micke@imendio.com>

	* gconf/gconf-sources.c: (gconf_source_free):
	- Free source->address, patch from GNOME Bugzilla #307887.

2005-06-21  Richard Hult  <richard@imendio.com>

	* Release 2.6.4.9.

	* gconf/gconf-dbus.c (ensure_dbus_connection): 
	* gconf/gconfd-dbus.c (gconfd_dbus_init): Improve logging messages
	to help debugging.

	* backends/markup-write-state.c (markup_write_state_write): Fix