@@ -119,7 +119,7 @@ fi
 
 GTK_DOC_CHECK([1.0])
 
-AC_ARG_ENABLE(gtk, [  --enable-gtk          Enable GTK+ support (for gconf-sanity-check) [default=auto]], enable_gtk="$enableval", enable_gtk=auto)
+AC_ARG_ENABLE(gtk, [  --enable-gtk          Enable GTK+ support (for gconf-sanity-check) [default=auto]], enable_gtk="$enableval", enable_gtk=no)
 
 AC_ARG_ENABLE(system-bus, [  --enable-system-bus Use the system bus instead of session bus], enable_system_bus="$enableval", enable_system_bus=no)
 
@@ -128,49 +128,14 @@ if test x$enable_system_bus = xyes; then
   AC_DEFINE(USE_SYSTEM_BUS, 1, Use the system bus)
 fi
 
-AC_ARG_WITH(ipc, [  --with-ipc=[orbit/dbus/both]   choose ipc mechanism to use in the daemon, [default=dbus]], with_ipc="$withval", with_ipc=dbus)
+PKG_CHECK_MODULES(GCONF_IPC, dbus-glib-1 >= 0.50)
 
-if test x$with_ipc = xorbit -o x$with_ipc = xboth; then
-  PKG_CHECK_MODULES(GCONF_ORBIT, ORBit-2.0 >= 2.6.0, have_orbit=yes, have_orbit=no)
-  if test x$have_orbit = xno ; then
-    AC_MSG_WARN([ORBit development libraries not found])
-    have_orbit=no
-  else
-    ORBIT_IDL="`$PKG_CONFIG --variable=orbit_idl ORBit-2.0`"
-    AC_SUBST(ORBIT_IDL)
-    AC_DEFINE(HAVE_ORBIT, 1, ORBit support in the daemon)
-  fi
-else 
-  have_orbit=no
-fi
+#AC_DEFINE(HAVE_ORBIT, , D-BUS support in the daemon)
+#AC_DEFINE(HAVE_DBUS, 1, D-BUS support in the daemon)
 
-PC_REQUIRES=ORBit-2.0
+AM_CONDITIONAL(HAVE_ORBIT, false)
+AM_CONDITIONAL(HAVE_DBUS, true)
 
-if test x$with_ipc = xdbus -o x$with_ipc = xboth; then
-  PKG_CHECK_MODULES(GCONF_DBUS, dbus-glib-1 >= 0.50, have_dbus=yes, have_dbus=no)
-  if test x$have_dbus = xyes; then
-    AC_DEFINE(HAVE_DBUS, 1, D-BUS support in the daemon)
-    PC_REQUIRES="dbus-1 dbus-glib-1"
-  fi
-else
-  have_dbus=no
-fi
-
-AC_SUBST(PC_REQUIRES)
-
-if test x$have_orbit = xno -a x$have_dbus = xno; then
-  AC_MSG_ERROR([You need either ORBit or D-BUS for IPC])
-fi
-
-AM_CONDITIONAL(HAVE_ORBIT, test x$have_orbit = xyes)
-AM_CONDITIONAL(HAVE_DBUS, test x$have_dbus = xyes)
-
-dnl ORBit/D-BUS flags
-GCONF_IPC_CFLAGS="$GCONF_ORBIT_CFLAGS $GCONF_DBUS_CFLAGS"
-GCONF_IPC_LIBS="$GCONF_ORBIT_LIBS $GCONF_DBUS_LIBS"
-
-AC_SUBST(GCONF_IPC_CFLAGS)
-AC_SUBST(GCONF_IPC_LIBS)
 
 AC_ARG_WITH(dbus_service_dir, [  --with-dbus-service-dir=PATH choose directory for dbus service files, [default=PREFIX/share/dbus-1/services]], with_dbus_service_dir="$withval", with_dbus_service_dir=$datadir/dbus-1/services)
 
@@ -288,7 +253,6 @@ gconf-2.0.pc
 ])
 
 echo
-echo "IPC method      : $with_ipc"
 echo "Dbus service dir: $DBUS_SERVICE_DIR"
 echo
 
