@@ -1,10 +1,4 @@
-NULL=
-
 GCONFD_BINARY_NAME=gconfd-2
-
-if HAVE_DBUS
-DBUS_API_SUBJECT_TO_CHANGE=-DDBUS_API_SUBJECT_TO_CHANGE=\"1\"
-endif
 
 INCLUDES=								\
 	-I$(top_srcdir)							\
@@ -13,7 +7,7 @@ INCLUDES=								\
 	$(GCONF_IPC_CFLAGS)						\
 	-DG_LOG_DOMAIN=\"GConf\"					\
 	-DGCONF_LOCALE_DIR=\""$(gconflocaledir)"\"			\
-        -DGCONF_SRCDIR=\""$(absolute_top_srcdir)"\"			\
+	-DGCONF_SRCDIR=\""$(absolute_top_srcdir)"\"			\
 	-DGCONF_CONFDIR=\""$(sysconfdir)/gconf/$(MAJOR_VERSION)"\"	\
 	-DGCONF_ETCDIR=\""$(sysconfdir)/gconf"\"			\
 	-DGCONF_BINDIR=\""$(bindir)"\"					\
@@ -25,10 +19,7 @@ INCLUDES=								\
 	-DGCONF_ENABLE_INTERNALS=1					\
 	-DGCONFD=\""$(GCONFD_BINARY_NAME)"\"				\
 	-DGCONF_SYSTEM_BUS_ADDRESS=\"unix:path="$(localstatedir)/run/dbus/system_bus_socket"\" \
-	$(DBUS_API_SUBJECT_TO_CHANGE)					\
-	$(NULL)
-
-EFENCE=
+	-DDBUS_API_SUBJECT_TO_CHANGE=\"1\"
 
 if GTK
 SANITY_CHECK=gconf-sanity-check-2
@@ -41,15 +32,8 @@ lib_LTLIBRARIES = libgconf-2.la
 bin_PROGRAMS = gconftool-2
 libexec_PROGRAMS = gconfd-2 $(SANITY_CHECK)
 
-if HAVE_ORBIT
-CORBA_SOURCECODE = GConfX-common.c GConfX-skels.c GConfX-stubs.c GConfX.h
-else
-CORBA_SOURCECODE = 
-endif
-
 ## not BUILT_SOURCES which seems to make a mess. fix with automake 1.5?
 built_sourcecode = 			\
-	$(CORBA_SOURCECODE)		\
 	gconfmarshal.h			\
 	gconfmarshal.c
 
@@ -81,59 +65,46 @@ gconfinclude_HEADERS = 		\
 	$(gconf_headers) 	\
 	gconf-enum-types.h
 
-# Only one client is supported at a time, if D-BUS is enabled we use that.
-if HAVE_DBUS
-gconf_ipc_sources = gconf-dbus.c gconf-dbus-utils.c gconf-dbus-utils.h
-else
-gconf_ipc_sources = gconf-corba-utils.c gconf-corba-utils.h gconf-corba.c 
-endif
-
-if HAVE_ORBIT
-gconfd_corba_sources = gconf-database-corba.c gconf-database-corba.h \
-	gconfd-corba.c gconfd-corba.h gconf-corba-utils.c gconf-corba-utils.h \
-	$(CORBA_SOURCECODE)
-else 
-gconfd_corba_sources =
-endif
-
-if HAVE_DBUS
-gconfd_dbus_sources = gconfd-dbus.c gconfd-dbus.h gconf-database-dbus.c \
-	gconf-database-dbus.h gconf-dbus-utils.c gconf-dbus-utils.h
-else 
-gconfd_dbus_sources = 
-endif
-
-gconfd_ipc_sources = $(gconfd_corba_sources) $(gconfd_dbus_sources)
-
-## This is broken I know, I'm going to break the server/client up and have a library later
-
 gconfd_2_SOURCES = \
 	gconf-database.h	\
 	gconf-database.c	\
-	$(gconfd_ipc_sources)	\
+	gconfd-dbus.c		\
+	gconfd-dbus.h		\
+	gconf-database-dbus.c	\
+	gconf-database-dbus.h	\
 	gconf-sources.h		\
 	gconfd.h		\
 	gconfd.c
 
-gconfd_2_LDADD = $(EFENCE) $(INTLLIBS) $(DEPENDENT_LIBS) $(GCONF_IPC_LIBS) libgconf-$(MAJOR_VERSION).la
+# these were in the above
+#	gconf-dbus-utils.c	
+#	gconf-dbus-utils.h	
 
-# gconf_testclient_SOURCES = \
-# 	testclient.c
-
-# gconf_testclient_LDADD = $(GLIB_LIBS) $(OAF_LIBS) libgconf-client.la
+gconfd_2_LDADD = \
+	$(INTLLIBS)		\
+	$(DEPENDENT_LIBS) 	\
+	$(GCONF_IPC_LIBS)	\
+	libgconf-$(MAJOR_VERSION).la
 
 gconftool_2_SOURCES = \
 	gconftool.c
 
-gconftool_2_LDADD = $(EFENCE) $(INTLLIBS) $(DEPENDENT_WITH_XML_LIBS) $(GCONF_IPC_LIBS) $(POPT_LIBS) libgconf-$(MAJOR_VERSION).la
+gconftool_2_LDADD = \
+	$(INTLLIBS)		\
+	$(DEPENDENT_WITH_XML_LIBS) \
+	$(GCONF_IPC_LIBS) 	\
+	$(POPT_LIBS)		\
+	libgconf-$(MAJOR_VERSION).la
 
 gconf_sanity_check_2_SOURCES = \
 	gconf-sanity-check.c
 
-gconf_sanity_check_2_LDADD = $(EFENCE) $(INTLLIBS) $(DEPENDENT_WITH_XML_AND_GTK_LIBS) $(POPT_LIBS) $(GCONF_IPC_LIBS) libgconf-$(MAJOR_VERSION).la
-
-$(CORBA_SOURCECODE): $(srcdir)/GConfX.idl $(ORBIT_IDL)
-	$(ORBIT_IDL) $(srcdir)/GConfX.idl
+gconf_sanity_check_2_LDADD = \
+	$(INTLLIBS)		\
+	$(DEPENDENT_WITH_XML_AND_GTK_LIBS) \
+	$(POPT_LIBS)		\
+	$(GCONF_IPC_LIBS)	\
+	libgconf-$(MAJOR_VERSION).la
 
 libgconf_2_la_SOURCES = \
 	gconf-internals.c	\
@@ -152,27 +123,32 @@ libgconf_2_la_SOURCES = \
 	gconf-value.c		\
 	gconf-client.c		\
 	gconf-enum-types.c	\
-	$(CORBA_SOURCECODE)	\
-	$(gconf_ipc_sources)
+	gconf-dbus.c 		\
+	gconf-dbus-utils.c 	\
+	gconf-dbus-utils.h	
 
 libgconf_2_la_LDFLAGS = -version-info $(GCONF_CURRENT):$(GCONF_REVISION):$(GCONF_AGE) -no-undefined
 libgconf_2_la_LIBADD = $(INTLLIBS) $(DEPENDENT_LIBS) $(GCONF_IPC_LIBS)
 
-if HAVE_DBUS
 servicedir       = $(DBUS_SERVICE_DIR)
 service_in_files = gconf.service.in
 service_DATA     = gconf.service
 
 %.service: %.service.in
 	sed -e "s|\@libexecdir\@|$(libexecdir)|" $< > $@
-endif
 
 if USE_SYSTEM_BUS
 systembusconfdir = $(sysconfdir)/dbus-1/system.d
 systembusconf_DATA = gconfd.conf
 endif
 
-EXTRA_DIST=GConfX.idl default.path.in gconfmarshal.list regenerate-enum-header.sh regenerate-enum-footer.sh gconf-corba.c gconf-corba.h gconf-corba-utils.c gconf-corba-utils.h gconf-database-corba.c gconf-database-corba.h gconfd-corba.c gconf-dbus.c gconf-database-dbus.c gconf-database-dbus.h gconfd-dbus.c gconfd-dbus.h gconf.service.in gconfd.conf
+EXTRA_DIST = \
+	default.path.in		\
+	gconfmarshal.list	\
+	regenerate-enum-header.sh \
+	regenerate-enum-footer.sh \
+	gconf.service.in	\
+	gconfd.conf
 
 install-data-local:
 	-mkdir -p $(DESTDIR)$(sysconfdir)/gconf/$(MAJOR_VERSION)
