@@ -1,5 +1,7 @@
 2005-11-01  Richard Hult  <richard@imendio.com>
 
+	* gconf/gconfd.c (main): From HEAD, add missing closelog().
+
 	* Release 2.6.4.12, which is a first version for testing with
 	D-BUS 0.30+.
 	
@@ -8,8 +10,10 @@
 	* backends/Makefile.am: Link the test with the backend instead of
 	compiling the source twice, removes warning from libtool.
 	
+	* gconf/Makefile.am: Only build the dbus version.
+
 	* configure.in: Bump version, and bring the gtk-doc check up to
-	date.
+	date. Clean up remove the orbit checks, only use gtk if specified.
 
 2005-09-30  Richard Hult  <richard@imendio.com>
 
